--- a/style.css
+++ b/style.css
@@ -1,38 +1,47 @@
 /** head **/
 @font-face {
     font-family: Comfortaa;
-    src: url(/font/Comfortaa/static/Comfortaa-Regular.ttf);
+    src: url(font/Comfortaa/static/Comfortaa-Regular.ttf);
 }
 @font-face {
-    font-family: jackson;
-    src: url(/font/jackson-signature/Jackson\ Signature.ttf);
+    font-family: Vujahday_Script;
+    src: url(font/Vujahday_Script/VujahdayScript-Regular.ttf);
+}
+@font-face{
+    font-family: Playwrite_DE_SAS;
+    src: url(font/Playwrite_DE_SAS/Playwrite_DE_SAS/PlaywriteDESAS-VariableFont_wght.ttf);
 }
 *{
     font-family: Comfortaa;
-    /** background-image: linear-gradient(to left, #fcb0f3, #3d05dd);**/
 }
 :root{
-    --green_one: #
-    --green_two: 
-    --green_three: 
-    --green_four:
-
+    --green_one: rgb(1, 104, 1);
+    --green_two: rgb(3, 73, 3);
+    --green_three: rgb(0, 45, 0);
+    --green_four: rgba(0, 0, 0, 0.5);
+    --green_five: rgb(0, 26, 0);
 }
 body{
     background-color: white;
     margin: 0;
     padding: 0;
 }
+hr{
+    color: aliceblue;
+}
 /** nav **/
 
 
 .navbar{
-    background-color: rgb(0, 101, 0);
+    background-image: linear-gradient(to left, var(--green_two), green);
     font-size: 25px;
 
 }
 .nav_tag_home{
     margin-left: 40px;
+    padding: 30px;
+    
+
 }
 ul{
     list-style-type: none;
@@ -49,29 +58,43 @@ li a {
     line-height: 70px;
 }
 .nav_link{
-    padding: 20px;
+    padding: 30px;
 }
 nav ul li :hover{
-    background-color: chartreuse;
-    color: black;
+    background-image: linear-gradient(to left, var(--green_two), var(--green_three));
 }
 
 /** hero_img **/
 .hero_img{
-    background-image: url("/Dairy-img/hero_img.jpg");
+    background-image: url("Dairy-img/hero_img.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover ;
     justify-content: center;
-
     display: flex;
     height: 550px;
 }
 .hero_topic{
+    font-family: Playwrite_DE_SAS;
     font-size: 70px;
 	color: whitesmoke;
     text-align: center;
-
+}
+.hero_img_dairy_products{
+    background-image: url("Dairy-img/ice-cream.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover ;
+    justify-content: center;
+    display: flex;
+    height: 550px;
+}
+.hero_topic_dairy_products{
+    font-family: Playwrite_DE_SAS;
+    font-size: 70px;
+	color: whitesmoke;
+    text-align: center;
+    margin-top: -1%;
 }
 
 
@@ -84,7 +107,7 @@ nav ul li :hover{
     width: 100%;
     padding: 20px;
     font-size: 125px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: var(--green_four);
 
 }
 /** P **/
@@ -96,12 +119,12 @@ p{
     margin-top: -9px;
     font-size: 40px; 
 }
-.first_p{
-    margin-right: ;
-}
+
+
+
 .p_1{
     margin-left: 47%;
-    margin-top: -400px;
+    margin-top: -375px;
 }
 .img-1{
     height: 40%;
@@ -109,31 +132,120 @@ p{
     margin-left: 3%;
     margin-top: 100px;
 }
-.p_mid{
-    font-size: 20px;
-    margin-top: 3%;
-    margin-left: 150px;
+.mid_background{
+    background-color: antiquewhite;
+    padding: 30px;
+
 }
-.img-2{
-    height: 30%;
-    width: 30%;
-    margin-left: 15%;
+.p_mid{
+    font-family: Vujahday_Script;
+    font-size: 40px;
+    margin-left: 10%;
+
+}
+.img-mid{
+    height: 400px;
+    width: 35%;
+    margin-left: 10%;
     margin-top: 100px;
 }
 .img-3{
-    height: 30%;
-    width: 30%;
-    margin-left: 15%;
-    margin-top: 100px;
-}
-.p_2{
-    margin-left: 15%;
+    height: 400px;
+    width: 35%;
+    margin-left: 10%;
     margin-top: 100px;
 }
 
-button{
+/** button_learn_more **/
+
+.button_learn_more{
+    margin-left: -9%;
     font-size: 25px;
-    margin-left: 45%;
-    margin-top: 15%;
+    padding: 1.5%;
+    transition-duration: 0.4s;
+    border-radius: 10%;
+    border: solid black;
+}
+.button_learn_more:hover{
+    background-color: var(--green_two);
+    color: aliceblue;
+    border: solid aliceblue;
+}
+
+.p_footer_learn_more{
+    text-align: center;
+    color:aliceblue;
+    font-family: Vujahday_Script;
+    font-size: 40px;
+    padding: 5%;
+}
+.parent_learn_more{
+    margin-left: 50%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px; 
+}
+.grid_learn_more{
+    grid-area: 2 / 1 / 1 / 3;
+}
+.learn_more_background{
+    background-color: var(--green_one);
+}
+
+
+/** button_book **/
+
+
+.button_book{
+    font-size: 25px;
+    margin-left: 70%;
     padding: 0.5%;
+    transition-duration: 0.4s;
+    border-radius: 10%;
+    border: solid black;
+}
+.button_book:hover{
+    background-color: var(--green_three);
+    color: aliceblue;
+    border: solid aliceblue;
+}
+
+.topic_footer_book{
+    padding: 2%;
+    color:aliceblue;
+    font-family: Vujahday_Script;
+    font-size: 50px;
+    margin-left: 5%;
+}
+.p_book_infor{
+    color: aliceblue;
+    font-size: 30px;
+    margin-left: 5%;
+}
+.p_book{
+    font-family: Vujahday_Script;
+    text-align: center;
+    color: aliceblue;
+    font-size: 50px;
+}
+
+.parent_book{
+    margin-left: -80%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px; 
+}
+.grid_book{
+    grid-area: 2 / 1 / 1 / 3;
+}
+.p_book_topic_background{
+    background-color: var(--green_three);
+    padding: 0.5%;
+}
+.book_background{
+    background-color:var(--green_three);
 }
