--- a/style.css
+++ b/style.css
@@ -217,43 +217,42 @@ p{
 
 
 /** button_learn_more **/
-
-.button_learn_more{
-    margin-left: -9%;
-    font-size: 25px;
-    padding: 1.5%;
-    transition-duration: 0.4s;
-    border-radius: 10%;
-    border: solid black;
-}
-.button_learn_more:hover{
-    background-color: var(--green_two);
-    color: aliceblue;
-    border: solid aliceblue;
-}
-
-.p_footer_learn_more{
-    text-align: center;
-    color:aliceblue;
-    font-family: Vujahday_Script;
-    font-size: 40px;
-    padding: 2%;
-}
-.parent_learn_more{
-    margin-left: 50%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px; 
-}
-.grid_learn_more{
-    grid-area: 2 / 1 / 1 / 3;
-}
-.learn_more_background{
+.learn_more_background {
     background-color: var(--green_one);
+    padding: 40px;
+    text-align: center;
 }
 
+.p_footer_learn_more {
+    font-family: "Vujahday_Script", cursive;
+    color: aliceblue;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+.parent_learn_more {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button_learn_more {
+    font-size: 25px;
+    padding: 12px 24px;
+    border-radius: 10px;
+    border: solid 2px aliceblue;
+    background: transparent;
+    transition: 0.4s;
+    color: aliceblue;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.button_learn_more:hover {
+    background-color: aliceblue;
+    border-color: black;
+    color: black;
+}
 
 /** button_book **/
 
